# sheet_collector

./: .gitignore  Cargo.toml  README.md  client.html  collect_task
.database/: db  snap.00000000000037DE  snap.0000000000004A4B  snap.000000000007A45A  snap.00000000000925DB
resource/: hello.html
resource/css/: xspreadsheet.css
resource/js/: zh-cn.js
src/: main.rs  table_page.rs
文件夹1/: form_content.html
文件夹2/: form_content.html
