[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
futures = "0.3"
serde_json = "1.0"
wd_log = "0.1"
sled = "0.34.7"
lazy_static = "1.4.0"
zerocopy = "0.6.1"
byteorder = "1.4.3"
serde = "1.0.131"
pnet = "0.28.0"